--- a/style.css
+++ b/style.css
@@ -1,109 +1,23 @@
-@font-face {
-  font-family: Protest; /*  here the name depend on you  */
-  src: url(Protest_Riot/ProtestRiot-Regular.ttf);
-}
-
 * {
   padding: 0;
   margin: 0;
-  font-size: 30px;
-  border: none;
-  outline: none;
 }
 
 .container {
+  height: 100vh;
   display: flex;
+  justify-content: center;
   align-items: center;
+}
+
+.search {
+  position: absolute;
+  right: 20px;
+  left: 20px;
+}
+
+.trunck {
+  display: flex;
   justify-content: center;
   flex-direction: column;
-  gap: 14px;
-  height: 100vh;
-  font-family: Protest;
-  background: rgba(118, 187, 235, 255);
-}
-
-.container .paramter {
-  display: flex;
-  gap: 20px;
-  border: 2px solid red;
-  flex-direction: column;
-  height: 550px;
-  width: 440px;
-  padding: 25px;
-  position: relative;
-  border-radius: 5px;
-  color: black;
-
-  /*background-color: #8ad5fb;*/
-
-  background: url(background\ image.jpg);
-  background-position: cover;
-  background-repeat: no-repeat;
-
-  /* From https://css.glass */
-
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-}
-
-.container .paramter .options {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  font-size: 25px;
-}
-
-.container .paramter .options select * {
-  background-color: #8ad5fb;
-}
-
-.container .paramter .options * {
-  /* background-color: #8ad5fb;*/
-  background: transparent;
-  font-family: Protest;
-}
-
-.container .paramter .options input {
-  text-align: center;
-  font-weight: bold;
-  font-size: 30px;
-  margin-bottom: 10px;
-}
-
-.container .paramter .General {
-  display: flex;
-  justify-content: space-around;
-  object-position: center;
-  justify-self: center;
-}
-
-.container .paramter .General img {
-  height: 100px;
-}
-
-header {
-  position: absolute;
-  top: 50%;
-  left: 30%;
-  margin: 10px;
-}
-
-.container .paramter .details {
-  display: flex;
-  gap: 20px;
-  position: absolute;
-  bottom: 10px;
-  left: 2%;
-  border: none;
-}
-
-.container .paramter .details * {
-  background-color: rgba(0, 0, 0, 0.1);
-  margin: 10px;
-  padding: 5px;
-  text-align: center;
-  border-radius: 10px;
 }
