--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   font-size: 25px;
   color: white;
   border: none;
+  outline: none;
 }
 
 .container {
@@ -62,6 +63,7 @@
   height: 200px;
   width: 200px;
   border-radius: 50% 50% 52% 48% / 52% 48% 52% 48%;
+  object-fit: cover;
 }
 
 .container .trunk .general div {
@@ -94,4 +96,8 @@
 
 .container .search select {
   background-color: #4a7ebb;
+}
+
+#hide * {
+  visibility: hidden;
 }
