improving style and html structure

--- a/view/index.html
+++ b/view/index.html
@@ -14,8 +14,8 @@
                         <div class="todayWeather">
                             <img src="./public/icons/images/2682816_cloud_cloudy_forecast_precipitation_snow_icon.png" alt="">
                             <div class="degree">
-                                <h2>32°</h2>
-                                <h2> +/_ 5</h2>
+                                <h2>10°</h2>
+                                <h2><sup>+</sup>/- 5</h2>
                             </div>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis possimus sed voluptatibus nesciunt ea neque molestiae corrupti. Doloribus, voluptatum reprehenderit. lorem700
@@ -40,28 +40,54 @@
                     </div>
 
                     <div class="board">
-                        <div class="searchBar ">
-                        <img id="tempIcon" src="./public/icons/svg/temp-hot-svgrepo-com.svg" alt="">
-                        <input type="text">
-                        <img id="searchIcon" src="./public/icons/svg/search-alt-2-svgrepo-com.svg" alt=""> 
+                        <div class="searchBar glassEffect ">
+                            <img id="tempIcon" src="./public/icons/svg/temp-hot-svgrepo-com.svg" alt="">
+                            <input type="text">
+                            <img id="searchIcon" src="./public/icons/svg/search-alt-2-svgrepo-com.svg" alt=""> 
                         </div>
                         <div class="details">
                             <div class="item glassEffect">
-                                <img src="./public/icons/svg/humidity-svgrepo-com.svg" alt="">
-                                <div>
+                                <div class="leading">
+                                    <img src="./public/icons/svg/humidity-svgrepo-com.svg" alt="">
                                     <span>Humidity</span>
                                     <span>12</span>
                                 </div>
                             </div>
                             <div class="item glassEffect">
-                                <img src="./public/icons/svg/pressure-svgrepo-com.svg" alt="">
-                                <div>
+                                <div class="leading">
+                                    <img src="./public/icons/svg/pressure-svgrepo-com.svg" alt="">
                                     <span>Pressure</span>
                                     <span>12</span>
                                 </div>
+                                <div class="progressor">
+
+                                </div>
+                            </div>
+                            <div class="item glassEffect uvIndex">
+                                <div  class="leading">
+                                    <img src="./public/icons/svg/sun-radiation-symbol-svgrepo-com.svg" alt="">
+                                    <span>UV index</span>
+                                    <span>32</span>
+                                </div>
+                            </div>
+                            <div class="item glassEffect">
+                                <div  class="leading">
+                                    <img src="./public/icons/svg/wind-svgrepo-com.svg" alt="">
+                                    <span>Wind</span>
+                                    <span>32</span>
+                                </div>
+                            </div>
+                            <div class="item glassEffect">
+                                <div  class="leading">
+                                    <img src="./public/icons/svg/rain-svgrepo-com.svg" alt="">
+                                    <span>Rain chanse</span>
+                                    <span>32</span>
+                                </div>
                             </div>
                         </div>
-                        <div class="curve"></div>
+                        <div class="curve glassEffect">
+
+                        </div>
                     </div>
 
             </div>
